@@ -1,6 +1,7 @@
 package com.kodilla.exception.io;
 
 import java.io.File;
+import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -8,17 +9,14 @@ import java.nio.file.Paths;
 import java.util.stream.Stream;
 
 public class FileReader {
-    public void readFile(){
+    public void readFile(final String filename) throws FileReaderException {
         ClassLoader classLoader = getClass().getClassLoader();
-        File file = new File(classLoader.getResource("names.txt").getFile());
-        Path path = Paths.get("psuje.txt");
-        try (Stream<String> fileLines = Files.lines(Paths.get(file.getAbsolutePath()))) {
+        try (Stream<String> fileLines = Files.lines(Path.of(classLoader.getResource(filename).toURI()))) {
             fileLines.forEach(System.out::println);
-        } catch (IOException e) {
-            System.out.println("Oh no! Something went wrong! " +e);
+        } catch (Exception e) {
+            throw new FileReaderException();
         } finally {
-            System.out.println("I'm gonna be here... always!");
+            System.out.println("I am gonna be here... always!");
         }
-        System.out.println(file.getPath());
     }
 }
